add test e2e user authentification & fix mvc